@@ -2,7 +2,7 @@
 # SportsTracker resources for english language (default)
 # 
 # Version: SportsTracker 7.1.1
-# Last update: 2016/01/03
+# Last update: 2016/02/29
 # 
 # (C) 2016, Stefan Saring
 #####################################################################
@@ -484,7 +484,7 @@ pv.view.close.Action.text=Close
 
 # ExerciseViewer Main panel
 pv.main.general_data.text=General Data
-pv.main.type.text=Type:
+pv.main.device.text=Device:
 pv.main.user.text=User:
 pv.main.date.text=Date:
 pv.main.duration.text=Duration:
