@@ -1,8 +1,8 @@
 #####################################################################
 # SportsTracker resources for german language
 # 
-# Version: SportsTracker 7.1.0
-# Last update: 2015/06/20
+# Version: SportsTracker 7.1.1
+# Last update: 2016/02/29
 # 
 # (C) 2015, Stefan Saring
 # Translated by Stefan Saring <projects@saring.de>
@@ -484,7 +484,7 @@ pv.view.close.Action.text=Schlie\u00DFen
 
 # ExerciseViewer Main panel
 pv.main.general_data.text=Allgemeine Daten
-pv.main.type.text=Typ:
+pv.main.device.text=Ger\u00E4t:
 pv.main.user.text=Benutzer:
 pv.main.date.text=Datum:
 pv.main.duration.text=Dauer:
